--- a/advent2020/day02.ipynb
+++ b/advent2020/day02.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,41 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "424"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "total = 0\n",
-    "for p in data:\n",
-    "    count = p.password.count(p.letter)\n",
-    "    if p.lo <= count <= p.hi:\n",
-    "        total += 1\n",
-    "total"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Part 2 \n",
-    "\n",
-    "Now the two nums in the beginning are positions, starting from 1. (no zero index). Only one of those positions can have the given letter."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +66,7 @@
        " Policy(lo=5, hi=9, letter='d', password='dwnwnbsddfmc')]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +77,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "424"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total = []\n",
+    "for p in data:\n",
+    "    count = p.password.count(p.letter)\n",
+    "    total.append(p.lo <= count <= p.hi)\n",
+    "      \n",
+    "sum(total)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 2 \n",
+    "\n",
+    "Now the two nums in the beginning are positions, starting from 1. (no zero index). Only one of those positions can have the given letter."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
        "747"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
