solved 2 more days

--- a/advent2020/day04.ipynb
+++ b/advent2020/day04.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,15 +22,15 @@
     "\n",
     "[#](https://adventofcode.com/2020/day/4). We have password data in the form:\n",
     "\n",
-    "code | name | range\n",
+    "code | name | comment\n",
     "---  | ---- | -----\n",
-    "byr | (Birth Year) | 4 digits, 1920-2020\n",
-    "iyr | (Issue Year) | 4 digits, 2010-2020\n",
-    "eyr | (Expiration Year) | 4 digits, 2020-2030\n",
-    "hgt | (Height) | num, cm 150-193, in 59-63\n",
-    "hcl | (Hair Color) | # followed by six chars 0-9 or a-f\n",
-    "ecl | (Eye Color) | one of amb blu brn gry grn hzl oth\n",
-    "pid | (Passport ID) | nine digit num including leading zeros\n",
+    "byr | (Birth Year) |\n",
+    "iyr | (Issue Year) | \n",
+    "eyr | (Expiration Year) | \n",
+    "hgt | (Height) | \n",
+    "hcl | (Hair Color) | \n",
+    "ecl | (Eye Color) | \n",
+    "pid | (Passport ID) |\n",
     "cid | (Country ID) | ignored\n",
     "\n",
     "For part 1, only the **cid** field can be missing, the other seven have to be present for the data to be valid.\n",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,17 +63,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "passport_fields = [\"byr\", \"iyr\", \"eyr\", \"hgt\", \"hcl\", \"ecl\", \"pid\", \"cid\"]\n",
+    "# the defaults apply from the left\n",
     "Passport = namedtuple(\"Passport\", passport_fields, defaults=[\"\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +87,7 @@
        " Passport(byr='1976', iyr='2015', eyr='2022', hgt='178cm', hcl='#341e13', ecl='hzl', pid='473630095', cid='')]"
       ]
      },
-     "execution_count": 262,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,8 +114,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So now to check that the first seven fields are present. First to double check that an empty string evaluates to false:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all([\"test\", \"\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +151,7 @@
        "190"
       ]
      },
-     "execution_count": 263,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,14 +166,27 @@
    "source": [
     "## Part 2\n",
     "\n",
-    "Now we need to validate data ranges. We already have a list of passports so I'll reuse that.\n",
+    "Now we need to validate data ranges - the table from above becomes:. \n",
+    "\n",
+    "code | name | range\n",
+    "---  | ---- | -----\n",
+    "byr | (Birth Year) | 4 digits, 1920-2020\n",
+    "iyr | (Issue Year) | 4 digits, 2010-2020\n",
+    "eyr | (Expiration Year) | 4 digits, 2020-2030\n",
+    "hgt | (Height) | num, cm 150-193, in 59-63\n",
+    "hcl | (Hair Color) | # followed by six chars 0-9 or a-f\n",
+    "ecl | (Eye Color) | one of amb blu brn gry grn hzl oth\n",
+    "pid | (Passport ID) | nine digit num including leading zeros\n",
+    "cid | (Country ID) | ignored\n",
+    "\n",
+    "We already have a list of passports so I'll reuse that.\n",
     "\n",
     "First up writing some helper functions to validate specific passport fields:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +195,7 @@
        "False"
       ]
      },
-     "execution_count": 314,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +228,7 @@
        "True"
       ]
      },
-     "execution_count": 315,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +253,7 @@
        "['amb', 'blu', 'brn', 'gry', 'grn', 'hzl', 'oth']"
       ]
      },
-     "execution_count": 316,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +274,7 @@
        "True"
       ]
      },
-     "execution_count": 317,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +317,7 @@
        "121"
       ]
      },
-     "execution_count": 323,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
