--- a/advent2020/day05.ipynb
+++ b/advent2020/day05.ipynb
@@ -164,76 +164,29 @@
     "\n",
     "The flight is full besides your seat, but some of the very front and back seats don't exist.\n",
     "\n",
-    "Seats with IDs +1 and -1 from mine should be in the list."
+    "Seats with IDs +1 and -1 from mine should be in the list. So this just means finding the seat id just above and below:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "874"
-      ]
-     },
-     "execution_count": 105,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "seats = [get_seat_id(inp) for inp in inp5]\n",
-    "len(seats)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "698 747\n"
+      "747\n"
      ]
     }
    ],
    "source": [
-    "sorted_seats = sorted(seats)\n",
-    "for i, n in enumerate(sorted_seats[:-1]):\n",
-    "    if sorted_seats[i+1] - n == 2:\n",
-    "        print(i, n+1)"
+    "seats = sorted([get_seat_id(inp) for inp in inp5])\n",
+    "\n",
+    "for i, n in enumerate(seats[:-1]):\n",
+    "    if seats[i+1] - n == 2:\n",
+    "        print(n+1)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 114,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[743, 744, 745, 746, 748, 749]"
-      ]
-     },
-     "execution_count": 114,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sorted_seats[695:701]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
