--- a/advent2020/day07.ipynb
+++ b/advent2020/day07.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
        "(('muted yellow', 2), ('FULL', 0))"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
        " 'dotted black': {'FULL': 0}}"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,47 +130,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "['dark olive', 'vibrant plum']\n",
       "dark olive ['faded blue', 'dotted black']\n",
       "vibrant plum ['faded blue', 'dotted black']\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "unhashable type: 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-18-4c721be63689>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mcol\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mstack\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0;32mif\u001b[0m \u001b[0mcc\u001b[0m \u001b[0;34m:=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrules\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcol\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcol\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[0mcolors\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: unhashable type: 'list'"
      ]
     }
    ],
    "source": [
     "find = \"shiny gold\"\n",
-    "stack = deque(rules[find].keys()) # first level bags\n",
-    "colors = []\n",
+    "stack = list(rules[find].keys()) # first level bags\n",
+    "colors = stack[:]\n",
+    "print(colors)\n",
     "\n",
     "for col in stack:\n",
     "    if cc := list(rules[col].keys()):\n",
     "        print(col, cc)\n",
-    "        colors.append(cc)"
+    "        colors.append(cc)\n",
+    "        for c in cc:\n",
+    "            stack.append(cc)\n",
+    "        stack = stack[1:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'dark olive', 'vibrant plum'}"
+       "['dark olive',\n",
+       " 'vibrant plum',\n",
+       " dict_keys(['faded blue', 'dotted black']),\n",
+       " dict_keys(['faded blue', 'dotted black'])]"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ans = set(rules[find].keys())"
+    "colors"
    ]
   },
   {
