sync after vaccy, no actual work done, time to catch up

--- a/advent2020/day16.ipynb
+++ b/advent2020/day16.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,20 +28,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'class: 1-3 or 5-7\\nrow: 6-11 or 33-44\\nseat: 13-40 or 45-50\\n\\nyour ticket:\\n7,1,14\\n\\nnearby tickets:\\n7,3,47\\n40,4,50\\n55,2,20\\n38,6,12'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "test16 = \"\"\"class: 1-3 or 5-7\n",
     "row: 6-11 or 33-44\n",
@@ -56,21 +45,19 @@
     "55,2,20\n",
     "38,6,12\"\"\"\n",
     "\n",
-    "inp16 = utils.get_input(16, splitlines=False)\n",
-    "\n",
-    "test16"
+    "inp16 = utils.get_input(16, splitlines=False)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First up, a simple function to parse an individual bag:"
+    "Parsing the input:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -109,68 +96,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'class': [1, 3, 5, 7], 'row': [6, 11, 33, 44], 'seat': [13, 40, 45, 50]}"
+       "23122"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "notes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "71"
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def check_field(num):\n",
-    "    valid = []\n",
-    "    for key, check_ranges in notes.items():\n",
-    "        a, b, x, y = check_ranges\n",
-    "        valid.append(a <= num <= b or x <= num <= y)\n",
+    "def solve_16(inp=test16):\n",
+    "    notes, ticket, nearby_tickets = parse_16(inp)\n",
+    "    errors = []\n",
     "    \n",
-    "    if any(valid):\n",
-    "        pass\n",
-    "    else:\n",
-    "        return num\n",
+    "    def check_field(num):\n",
+    "        valid = []\n",
+    "        for key, check_ranges in notes.items():\n",
+    "            a, b, x, y = check_ranges\n",
+    "            valid.append(a <= num <= b or x <= num <= y)\n",
     "\n",
-    "errors = []\n",
-    "for t in nearby_tickets:\n",
-    "    for n in t:\n",
-    "        if err := check_field(n):\n",
-    "            errors.append(err)\n",
-    "            \n",
-    "sum(errors)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "notes, ticket, nearby_tickets = parse_16(inp16)"
+    "        if any(valid):\n",
+    "            return None\n",
+    "        else:\n",
+    "            return num\n",
+    "    \n",
+    "    for t in nearby_tickets:\n",
+    "        for n in t:\n",
+    "            if err := check_field(n):\n",
+    "                errors.append(err)\n",
+    "\n",
+    "    return sum(errors)\n",
+    "\n",
+    "assert(solve_16() == 71)\n",
+    "solve_16(inp16)"
    ]
   },
   {
@@ -184,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -237,6 +201,18 @@
    ],
    "source": [
     "def valid_ticket(ticket):\n",
+    "    \n",
+    "    def check_field(num):\n",
+    "        valid = []\n",
+    "        for key, check_ranges in notes.items():\n",
+    "            a, b, x, y = check_ranges\n",
+    "            valid.append(a <= num <= b or x <= num <= y)\n",
+    "\n",
+    "        if any(valid):\n",
+    "            return None\n",
+    "        else:\n",
+    "            return num\n",
+    "        \n",
     "    return not any([check_field(n) for n in ticket])\n",
     "\n",
     "for t in nearby_tickets:\n",
@@ -245,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -276,6 +252,213 @@
    "source": [
     "for num in t:\n",
     "    print(a(num))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_tickets = [ticket] + nearby_tickets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "check = defaultdict(list)\n",
+    "\n",
+    "for tick in all_tickets:\n",
+    "    for i, num in enumerate(tick):\n",
+    "        check[i].append(a(num))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       0     1      2\n",
+       "0   True  True   True\n",
+       "1  False  True   True\n",
+       "2   True  True  False\n",
+       "3   True  True   True"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(check[0])\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       0     1      2\n",
+       "0   True  True   True\n",
+       "1  False  True   True\n",
+       "2   True  True  False\n",
+       "3   True  True   True"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 3\n",
+      "1 4\n",
+      "2 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, t in enumerate(df.sum(axis=0)):\n",
+    "    print(i, t)"
    ]
   },
   {
